--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
                 <img src="assets/profile.jpg" alt="">
             </div>
             <ul>
+                <li class="portfolio"><a href="https://nicolas-araujo0.github.io/Portfolio/"> Portfolio</a></li>
                 <li class="mail"> Dearaujonicolas@outlook.fr</li>
                 <li class="home"> 38430, Moirans</li>
                 <li class="phone"> 06 24 45 71 83</li>
