changed profile pic

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
         <aside>
             <div class="imgContainer">
-                <img src="assets/profile.jpg" alt="">
+                <img src="assets/IMG_0447-edited.webp" alt="">
             </div>
             <ul>
                 <li class="portfolio"><a href="https://nicolas-araujo0.github.io/Portfolio/" target="_blank"> Portfolio</a></li>
