--- a/index.html
+++ b/index.html
@@ -25,29 +25,42 @@
                 <h3>Compétences</h3>
                 <ul>
                     <li><b>Front</b>: HTML - JS - VueJS</li>
-                    <li><b>Back</b> : PHP - Twig - MySQL</li>
+                    <li><b>Back</b> : PHP - Symfony - Twig - MySQL</li>
                     <li><b>Style</b> : CSS - SCSS - Bootstrap</li>
+                    <li><b>Autres</b> : Wordpress </li>
                 </ul>
             </article>
             <article>
                 <h3>Diplômes et Formations</h3>
                 <p><b>Formation DWWM</b> (Développeur web web mobile) <span>23 novembre 2022 au 13 novembre 2023.</span>
                 </p>
-                <p><b>Aksis</b> : Valoriser son image professionnel, Voiron <span>Juillet 2022.</span></p>
                 <p><b>Bac ES</b> : Lycée Pierre-Beghin Moirans. <span>Obtention en juillet 2020</span></p>
             </article>
             <article>
                 <h3>Projets professionnels <br>(fait en cours de formation)</h3>
                 <div>
-                    <h4>OnlineSnack (1 mois)</h4>
+                    <h4>Site suivi de lecture (~2 mois) </h4>
                     <div>
                         <h5>Backend</h5>
-                        <p>Création de la partie administrateur du projet. <br> La connection / l'envoie de requêtes avec la base de donnée est faite avec des requêtes SQL. Un router est utilisé pour exécuter charger une page Twig en particulier et certaines requêtes en fonction de l'URI</p>
-                        <span>Technologie utilisées : HTML - CSS - JS - PHP - MySQL - Twig</span>
+                        <p>Création de plusieurs parties, dont une partie administrateur permettant l'ajout de mangas ou
+                            de livres à la base de données, et une autre gérant l'API.</p>
+                        <p>La relation avec la base de données est réalisée grâce au framework Symfony, plus
+                            particulièrement à Doctrine ORM.</p>
+                        <p>La partie API est gérée avec le framework API Platform en se basant sur les entités et leurs
+                            propriétés. Il y a des restrictions sur les routes accessibles et les données renvoyées
+                            selon les droits de l'utilisateur. </p>
+                        <span>Technologie utilisées : HTML - CSS - PHP - Symfony</span>
                     </div>
                     <div>
                         <h5>Frontend</h5>
-                        <p>Création de la partie utilisateur du projet. La liaison avec le base de donnée est faite avec des requêtes en utilisant une 'API' que j'ai crée, et avec AXIOS pour l'envoie de données. Un router est utilisé pour gérer l'affichage d'une Vue en particulier et des fonctions liées à celle-ci</p>
+                        <p>Création de la partie utilisateur du projet. Le framework VueJS est utilisé afin de créer une
+                            SPA ( Single Page Application). Celui-ci est flexible, performant et il s'agit du framework
+                            front avec lequel j'ai le plus pratiqué.</p>
+                        <p>Le frontend est composé des pages suivantes : accueil (liste des mangas/livres disponibles) -
+                            connexion - création de compte - suivi de lecture - profil utilisateur - info sur le site.
+                        </p>
+                        <p>La liaison avec la base de données est effectuée avec des requêtes en utilisant une 'API'.
+                        </p>
                         <span>Technologie utilisées : HTML - CSS - VueJS</span>
                     </div>
                 </div>
@@ -60,7 +73,8 @@
                 <img src="assets/IMG_0447-edited.webp" alt="">
             </div>
             <ul>
-                <li class="portfolio"><a href="https://nicolas-araujo0.github.io/Portfolio/" target="_blank"> Portfolio</a></li>
+                <li class="portfolio"><a href="https://nicolas-araujo0.github.io/Portfolio/" target="_blank">
+                        Portfolio</a></li>
                 <li class="mail"> Dearaujonicolas@outlook.fr</li>
                 <li class="home"> 38430, Moirans</li>
                 <li class="phone"> 06 24 45 71 83</li>
