--- a/index.html
+++ b/index.html
@@ -45,21 +45,20 @@
                         <p>Création de plusieurs parties, dont une partie administrateur permettant l'ajout de mangas ou
                             de livres à la base de données, et une autre gérant l'API.</p>
                         <p>La relation avec la base de données est réalisée grâce au framework Symfony, plus
-                            particulièrement à Doctrine ORM.</p>
-                        <p>La partie API est gérée avec le framework API Platform en se basant sur les entités et leurs
+                            particulièrement à Doctrine ORM.La partie API est gérée avec le framework API Platform en se
+                            basant sur les entités et leurs
                             propriétés. Il y a des restrictions sur les routes accessibles et les données renvoyées
-                            selon les droits de l'utilisateur. </p>
+                            selon les droits de l'utilisateur.</p>
                         <span>Technologie utilisées : HTML - CSS - PHP - Symfony</span>
                     </div>
                     <div>
                         <h5>Frontend</h5>
                         <p>Création de la partie utilisateur du projet. Le framework VueJS est utilisé afin de créer une
                             SPA ( Single Page Application). Celui-ci est flexible, performant et il s'agit du framework
-                            front avec lequel j'ai le plus pratiqué.</p>
+                            front avec lequel j'ai le plus pratiqué.La liaison avec la base de données est effectuée
+                            avec des requêtes en utilisant une 'API'.</p>
                         <p>Le frontend est composé des pages suivantes : accueil (liste des mangas/livres disponibles) -
                             connexion - création de compte - suivi de lecture - profil utilisateur - info sur le site.
-                        </p>
-                        <p>La liaison avec la base de données est effectuée avec des requêtes en utilisant une 'API'.
                         </p>
                         <span>Technologie utilisées : HTML - CSS - VueJS</span>
                     </div>
