--- a/index.html
+++ b/index.html
@@ -13,33 +13,33 @@
 <body>
     <main>
         <section>
-            <article>
+            <article class="no-space">
                 <div>
-                    <h1>Nicolas Araujo</h1>
-                    <h2>Développeur Web</h2>
+                    <h1>Concepteur développeur d'application</h1>
                 </div>
-                <p>Je suis actuellement entrain de suivre une formation pour devenir Développeur Web pour vivra de ma
-                    passion par la suite.</p>
-            </article>
-            <article>
-                <h3>Compétences</h3>
-                <ul>
-                    <li><b>Front</b>: HTML - JS - VueJS</li>
-                    <li><b>Back</b> : PHP - Symfony - Twig - MySQL</li>
-                    <li><b>Style</b> : CSS - SCSS - Bootstrap</li>
-                    <li><b>Autres</b> : Wordpress </li>
-                </ul>
-            </article>
-            <article>
-                <h3>Diplômes et Formations</h3>
-                <p><b>Formation DWWM</b> (Développeur web web mobile) <span>23 novembre 2022 au 13 novembre 2023.</span>
-                </p>
-                <p><b>Bac ES</b> : Lycée Pierre-Beghin Moirans. <span>Obtention en juillet 2020</span></p>
-            </article>
-            <article>
-                <h3>Projets professionnels <br>(fait en cours de formation)</h3>
                 <div>
-                    <h4>Site suivi de lecture (~2 mois) </h4>
+                    <span>Modalités: 3 semaines en entreprise / 1 semaine en cours</span>
+                    <span>Éligiblité à la prime de 6000€</span>
+                </div>
+            </article>
+            <article class="no-space">
+                <h3>Diplômes et Formations</h3>
+                <div>
+                    <b>Novembre 2022 à Novembre 2023</b>
+                    <b>Formation Développeur Web et Web Mobile</b>
+                    <i>Organisme de formation OnlineFormaPro (présentiel) 1536 heures de formations</i>
+                    <span>Technologies utilisées : HTML, CSS, JavaScript, VueJS, PHP, MySQL, Symfony, Wordpress</span>
+                </div>
+                <div>
+                    <b>2018 à 2020</b>
+                    <b>Bac Économie et Social</b>
+                    <i>Lycée Pierre-Beghin, Moirans</i>
+                </div>
+            </article>
+            <article >
+                <h3>Projets professionnel</h3>
+                <div>
+                    <h4>Site suivi de lecture</h4>
                     <div>
                         <h5>Backend</h5>
                         <p>Création de plusieurs parties, dont une partie administrateur permettant l'ajout de mangas ou
@@ -47,21 +47,37 @@
                         <p>La relation avec la base de données est réalisée grâce au framework Symfony, plus
                             particulièrement à Doctrine ORM.La partie API est gérée avec le framework API Platform en se
                             basant sur les entités et leurs
-                            propriétés. Il y a des restrictions sur les routes accessibles et les données renvoyées
+                            propriétées. Il y a des restrictions sur les routes accessibles et les données renvoyées
                             selon les droits de l'utilisateur.</p>
-                        <span>Technologie utilisées : HTML - CSS - PHP - Symfony</span>
                     </div>
                     <div>
                         <h5>Frontend</h5>
                         <p>Création de la partie utilisateur du projet. Le framework VueJS est utilisé afin de créer une
                             SPA ( Single Page Application). Celui-ci est flexible, performant et il s'agit du framework
-                            front avec lequel j'ai le plus pratiqué.La liaison avec la base de données est effectuée
+                            front avec lequel j'ai le plus pratiqué. La liaison avec la base de données est effectuée
                             avec des requêtes en utilisant une 'API'.</p>
-                        <p>Le frontend est composé des pages suivantes : accueil (liste des mangas/livres disponibles) -
-                            connexion - création de compte - suivi de lecture - profil utilisateur - info sur le site.
-                        </p>
-                        <span>Technologie utilisées : HTML - CSS - VueJS</span>
                     </div>
+                </div>
+                <h3>Expériences</h3>
+                <div class="gap">
+                    <b>Février 2021 à Février 2022</b>
+                    <b>Employé commercial - Carrefour</b>
+                    <span>Travail en équipe, relation client, autonomie</span>
+                </div>
+            </article>
+            <article class="no-space">
+                <h3>Compétences</h3>
+                <div>
+                    <b>Intégration web </b>
+                    <span>HTML, CSS, SCSS</span>
+                </div>
+                <div>
+                    <b>Développement Frontend</b>
+                    <span>VueJS, JavaScript</span>
+                </div>
+                <div>
+                    <b>Développement Backend</b>
+                    <span>PHP, Symfony, Twig, MySQL</span>
                 </div>
             </article>
 
@@ -70,11 +86,14 @@
         <aside>
             <div class="imgContainer">
                 <img src="assets/IMG_0447-edited.webp" alt="">
+                <h2>Nicolas ARAUJO</h2>
             </div>
             <ul>
+                <li class="portfolio"><a href="https://www.linkedin.com/in/nicolas-araujo-3386b8240/" target="_blank">
+                        Linkedin</a></li>
                 <li class="portfolio"><a href="https://nicolas-araujo0.github.io/Portfolio/" target="_blank">
                         Portfolio</a></li>
-                <li class="mail"> Dearaujonicolas@outlook.fr</li>
+                <li class="mail"><a href="mailto:Dearaujonicolas@outlook.fr"> Dearaujonicolas@outlook.fr</a></li>
                 <li class="home"> 38430, Moirans</li>
                 <li class="phone"> 06 24 45 71 83</li>
             </ul>
